Made some edits in positionalIntersect.